# personal-secret

./: .gitignore  .mcp.json  README.md  claude.md  pyproject.toml
.claude/: settings.json
.claude/docs/: python-architecture.md  python-style.md  system.md
.claude/docs/api/: api.md  conventions.md
.claude/documents/: system.md
.claude/hooks/: check_dependencies.py  check_label_comments.py  hint_dependencies.py  hint_dependents.py
.claude/rules/: claude-files.md
.claude/rules/api/: behavior.md  domain-event.md  endpoint-internal.md  endpoint.md  entity.md  exception.md  repository.md  server.md  singleton-config.md  usecase-flow.md  value-object.md  worker.md
.claude/rules/shared/: conventions.md
.devcontainer/: devcontainer.json
.docker/: Dockerfile.develop.api  Dockerfile.develop.mcp  Dockerfile.develop.workspace  Dockerfile.production.api  docker-compose.develop.yml  docker-compose.production.yml
.env/: .env.develop.example  .env.production.example
personal_secret/api/: CLAUDE.md  README.md  config.py
personal_secret/api/behavior/: __init__.py  server.py  worker.py
personal_secret/api/core/: behavior.py  entity.py  event.py  exception.py  i18n.py  model.py  repository.py  usecase.py  validate.py  (+1 more)
personal_secret/cli/: README.md  config.py  exception.py
personal_secret/mcp/: server.py
scripts/: install-cli.sh
scripts/develop/: devcontainer-initialize.sh  devcontainer-postcreate.sh  docker-compose-up.sh
scripts/production/: docker-compose-build.sh  docker-compose-down.sh  docker-compose-up.sh
tests/: crypto.py  factories.py  run.py
(+214 files in other folders)
